# Jet

./: .gitignore  .travis-ci.sh  .travis.yml  AsmVM.cpp  AsmVM.vcxproj  AsmVM.vcxproj.filters  CMakeLists.txt  Compilation.cpp  Compilation.h  Compiler.cpp  Compiler.h  CompilerContext.cpp  CompilerContext.h  ControlExpressions.cpp  ControlExpressions.h  DeclarationExpressions.cpp  DeclarationExpressions.h  ExpressionVisitor.h  Expressions.cpp  Expressions.h  LICENSE.txt  Lexer.cpp  Lexer.h  OptionParser.h  Parselets.cpp  Parselets.h  Parser.cpp  Parser.h  Project.cpp  Project.h  README.md  Source.cpp  Source.h  Token.cpp  Token.h  Types.cpp  Types.h  arg_parse.h  jetc.cpp  racer.cpp  (+2 more)
.github/workflows/: ccpp.yml
Jet/: jet.jet  llvm-c.jet  project.jp  types.jet
JetCore/: core.jet  map.jet  project.jp  string.jet  vector.jet
Plugins/: NotepadPlusPlusHighlighting
Types/: Function.cpp  Function.h  Types.cpp  Types.h
jet/: project.jp  types.jet
jetc/: project.jp  test.jet
jetcore/: project.jp  string.jet  vector.jet
src/: Compilation.cpp  Compilation.h  Compiler.cpp  Compiler.h  CompilerContext.cpp  CompilerContext.h  DeclarationExpressions.cpp  Diagnostics.cpp  Diagnostics.h  ExpressionVisitor.h  Expressions.h  Lexer.cpp  Lexer.h  OptionParser.h  Parselets.cpp  Parselets.h  Parser.cpp  Parser.h  Project.cpp  Project.h  Source.cpp  Source.h  Token.cpp  Token.h  UniquePtr.h  racer.cpp
src/expressions/: ControlExpressions.cpp  ControlExpressions.h  DeclarationExpressions.cpp  DeclarationExpressions.h  Expression.h  Expressions.cpp  Expressions.h  FunctionExpression.cpp  FunctionExpression.h  LetExpression.cpp  LetExpression.h  StructExpression.cpp  StructExpression.h
src/tools/: jetc.cpp  test_runner.cpp
src/types/: Function.cpp  Function.h  Namespace.cpp  Namespace.h  Struct.cpp  Struct.h  Types.cpp  Types.h
tests/Arrays/: project.jp  test.jet
tests/Const/: project.jp  test.jet
tests/ConstErrors/: project.jp  test  test.jet
tests/DefaultConstructors/: project.jp  test.jet
tests/Enums/: project.jp  test.jet
tests/ExtensionMethods/: project.jp  test.jet
tests/ForLoop/: test.jet
tests/Generators/: project.jp  test.jet
tests/Globals/: test.jet
tests/IfStatements/: test.jet
tests/Inheritance/: test.jet
tests/Lambdas/: project.jp  test.jet
tests/LargeCopy/: project.jp  test.jet
tests/Literals/: project.jp  test.jet
tests/Namespaces/: project.jp  test.jet
tests/NewFree/: test.jet
tests/OperatorOverloads/: test.jet
tests/OperatorPrecedence/: test.jet
tests/Overloads/: project.jp  test.jet
tests/SmartPointerTest/: project.jp  test.jet
tests/StructReturns/: test.jet
tests/Traits/: test.jet
tests/Unions/: project.jp  test.jet
tests/Vector3/: project.jp  test.jet
tests/Vectors/: project.jp  test.jet
tests/VirtualFunctions/: test.jet
